@@ -1,3 +1,6 @@
+2010-04-15  6.6.1-4 Cristy  <quetzlzacatenango@image...>
+  * Do not set the resample virtual pixel method when undefined.
+
 2010-04-12  6.6.1-3 Cristy  <quetzlzacatenango@image...>
   * For HSL to RGB, if color temperature is less than 0, set RGB to lightness.
   * Do not flip BMP image with negative height when pinging.
